--- a/.github/workflows/DeploySurge.yml
+++ b/.github/workflows/DeploySurge.yml
@@ -1,33 +1,39 @@
-name: Deploy
+name: Basic React App Deploy to Surge
 
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the master branch
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-   build:
+  # This workflow contains a single job called "build"
+  build:
+    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
+    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-      # Install node version 12
-      - uses: actions/setup-node@v2-beta
-        with:
-          node-version: '12'
+    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+    - uses: actions/checkout@v2
+    
+    - name: Install NodeJS              #install nodejs
+      uses: actions/setup-node@v2-beta
+      with:
+        node-version: 12
+    
+    - uses: borales/actions-yarn@v2.0.0
+      with:                                       #install yarn for react dependencies
+        cmd: install # will run `yarn install` command
+        
+    - name: Build React App       #build yarn
+      run: yarn build
+      
+    - name: Install Surge                       #install surge for deployment
+      run: npm i --save surge --unsafe-perm=true --allow-root
 
-      # Install npm packages
-      - name: Install packages
-        run: npm install
-
-      # Build react app
-      - name: Build the app
-        run: npm run build
-
-      # Install Surge 
-      - name: Install Surge
-        run: npm install -g surge
-
-      # Deploy to the defined URL using the token
-      - name: Deploy to surge
-        run: surge ./build basic-react-app.surge.sh --token ${{secrets.SURGE_TOKEN}}
+    - name: Deploy to Surge
+      run: surge ./build basicreact.surge.sh --token ${{ secrets.Surge_token }}
