--- a/.github/workflows/DeploySurge.yml
+++ b/.github/workflows/DeploySurge.yml
@@ -36,4 +36,4 @@ jobs:
       run: npm i --save surge --unsafe-perm=true --allow-root
 
     - name: Deploy to Surge
-      run: surge ./build basicreact.surge.sh --token ${{ secrets.Surge_token }}
+      run: surge ./build basicreactapp.surge.sh --token ${{ secrets.SURGE_TOKEN }}
